# fictus.aggregatum

./: .cruft.json  .gitignore  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: black.yaml  docs.yaml  mypy.yaml  tests.yaml
scripts/: create_dataset.py  make_example_figure.py  view_example.py
src/fictus/aggregatum/: __init__.py  dataset.py  utils.py  visualization.py  wav2rgb.py
tests/: test_randomness.py  test_reproducibility.py
