[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "fictus.aggregatum"
description = "A fictional cell (with aggregates)."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
]
keywords = []
license = { text = "BSD 3-Clause License" }
authors = [
    { email = "diane.adjavon@icloud.com", name = "Diane Adjavon" },
]
dynamic = ["version"]
dependencies = [
  'scipy',
  'numpy',
  'napari[all]',
  'zarr'
]

[project.optional-dependencies]
dev = [
  'pytest',
  'pytest-cov',
  'black',
  'mypy',
  'pdoc',
  'pre-commit'
]

[project.urls]
homepage = "https://github.com/adjavon/fictus.aggregatum"
repository = "https://github.com/adjavon/fictus.aggregatum"
